# kas-licytacje

./: mazowieckie.csv  pyproject.toml
kas/: crawler.py  main.py  requests.py  url.py
