[project]
name = "kas-licytacje"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cssselect>=1.3.0",
    "lxml>=6.0.1",
    "pymupdf>=1.26.4",
    "requests>=2.31.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
