[project]
name = "kas-licytacje"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cssselect>=1.3.0",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.5",
    "lxml>=6.0.1",
    "pymupdf>=1.26.4",
    "requests>=2.31.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
